@@ -23,6 +23,7 @@ no_index:
     - xt
 requires:
   Curses::UI: 0.9609
+  Curses::UI::AnyEvent: 0.101
   Curses::UI::DelimitedTextViewer: 0.1
   Curses::UI::Grid: 0.15
   Curses::UI::Mousehandler::GPM: 0.01
