@@ -8,6 +8,9 @@ SEE ALSO
     Curses::UI
         A curses based OO user interface framework
 
+    Curses::UI::AnyEvent
+        Sub-class of Curses::UI for AnyEvent
+
     Curses::UI::Buttonbox
         Create and manipulate button widgets
 
