@@ -1,4 +1,5 @@
 0.04
+ - Add Curses::UI::AnyEvent.
  - Add missing LICENSE file.
  - Fix Makefile.PL fails with no '.' in @INC.
  - Improve LICENSE AND COPYRIGHT section in doc.
